--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,15 @@ JWT_EXPIRATION=7d
 
 
 COOKIE_EXPIRE=7
+
+
+
+
+SMPT_HOST="smtp.gmail.com"
+SMPT_PORT=465
+SMPT_USER="younasaqil03@gmail.com"
+SMPT_PASS=ozzv kbga aser atdi
+
+RESETPASSWORDEXPIRE=15
+
+FRONTEND_URL="http://localhost:3000"
