--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^1.0.1",
     "universal-cookie": "^6.1.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
