--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/x-charts": "^6.18.3",
+    "@mui/x-date-pickers": "^6.18.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
