--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-to-pdf": "^1.0.1",
     "universal-cookie": "^6.1.1",
     "uuid": "^9.0.1",
